project generation should automatically create a github webhook to trigger jenkins builds on push events

--- a/{{cookiecutter.project_name}}/jenkins/job_config.yaml
+++ b/{{cookiecutter.project_name}}/jenkins/job_config.yaml
@@ -6,4 +6,4 @@
         - github:
             repo-owner: '{{ cookiecutter.github_username }}'
             repo: '{{ cookiecutter.project_name }}'
-
+            credentials-id: 'github-repo-scan'
