moved the bootstrapping scripts into the rendered project so they can be reused or referenced by the user

--- a/{{cookiecutter.project_name}}/jenkins/job_config.yaml
+++ b/{{cookiecutter.project_name}}/jenkins/job_config.yaml
@@ -4,6 +4,6 @@
     script-path: 'jenkins/Jenkinsfile'
     scm:
         - github:
-            repo-owner: '{{ cookiecutter.github_username }}'
+            repo-owner: '{{ cookiecutter.github_user }}'
             repo: '{{ cookiecutter.project_name }}'
             credentials-id: 'github-repo-scan'
